Seria la version definitiva

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
 
 
     defaultConfig {
-        applicationId "dncom.example.dolarnow"
+        applicationId "com.example.dolarargentina"
         minSdk 21
         targetSdk 31
-        versionCode 5
+        versionCode 6
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
